Adding new copy to actions page

--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -13,7 +13,11 @@
 {% block right_content %}
     <div class="box_three_top"></div>
     <div class="box_three_middle">
-        <img src="{% dated_static 'images/theme/actions.jpg' %}" alt="benefits" width="675" height="287"/>
+        <h1>Set the trend in your home</h1>
+        <p>
+            The actions you’ll find here will cut energy waste, lower your monthly bills and put your home on the
+            leading edge of the energy efficiency transformation.
+        </p>
     </div>
     <div class="box_three_bottom"></div>
     
