removing some breadcrumbs. Adding some breadcrumbs to events. Highlighting community tab on events. [Completed: 532]

--- a/events/templates/events/create.html
+++ b/events/templates/events/create.html
@@ -2,6 +2,7 @@
 {% block title %}Create an Event{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
+    <a href="{% url action_community_show %}">Community</a> &rsaquo;
     <a href="{% url event-show %}">Events</a> &rsaquo;
     Create an Event
 {% endblock %}
