--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -1,2 +1,2 @@
 {% extends "base.html" %}
-{% block rah_nav_select %}nav_events{% endblock %}
+{% block rah_nav_select %}nav_community{% endblock %}
