Making pledge card page usable when logged out. [Completed: 533]

--- a/commitments/templates/commitments/_card.html
+++ b/commitments/templates/commitments/_card.html
@@ -1,4 +1,4 @@
-<h1 style="float:left;">Commitment Card</h1>
+<h1 style="float:left;">Pledge Card</h1>
 <form style="float:right; margin-right:85px;" action="" method="get" id="commitment_card_select_form">
     <div class="form_row">
         <label for="id_form_name">Select Commitment Card</label>
