--- a/commitments/templates/commitments/show.html
+++ b/commitments/templates/commitments/show.html
@@ -115,7 +115,7 @@
     {% else %}
     <p>
         <a href="{% url login %}?next={{ request.path }}">Login</a> or 
-        <a href="{% url register %}?next={{ request.path }}">Register</a> 
+        <a href="{% url register %}?next={{ request.path }}">register</a> 
         to enter pledge cards.
     </p>
     {% endif %}
