Adding stronger pledge language to logged in homepage. [touch: 545]

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -10,19 +10,15 @@
                 <p>
                     <object width="360" height="227"><param name="movie" value="https://repowerathome.com/youtube/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="https://repowerathome.com/youtube/v/kPm9wMhIcJs&amp;hl=en_US&amp;fs=1?rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="360" height="227"></embed></object>
                 </p>
-                <h3>Solve the climate crisis from the ground up.</h3>
+                <h3>A clean energy future starts with us. </h3>
                 <p>
-                    Repower at Home Trendsetters pledge to save energy in their own home, and support their friends,
-                    neighbors and community members as they work to eliminate energy waste.
-                </p>
-                <p>
-                    Join us! Become a Trendsetter by creating an account. With an account, you can:
+                    Across the country, Trendsetters are working to transform the way our homes and communities use energy. Join us! Become a Trendsetter by creating an account and pledging to save energy. With an account, you can:
                 </p>
                 <ul>
-                    <li>Learn how you can save energy and money in your home.</li>
-                    <li>Share your energy-saving achievements with your friends.</li>
-                    <li>Access tools for spreading the word about saving energy in your community.</li>
-                    <li>Connect with other Trendsetters in your neighborhood and across the country.</li>
+                    <li>Learn about easy steps you can take to rid your home of energy waste.</li>
+                    <li>Share your energy-saving achievements with your friends. </li>
+                    <li>Access tools for spreading the word about saving energy in your community. </li>
+                    <li>Connect with other Trendsetters in your neighborhood and across the country. </li>
                 </ul>
                 <p>
                     <div class="fb_button" id="fb-login">
@@ -32,7 +28,10 @@
                     </div>
                 </p>
             </div>
-            <div id="registration_right_col">                
+            <div id="registration_right_col">
+                <p id="home_page_pledge_text">
+                    &#8220;I pledge to save energy <br/>&nbsp;in my home and set the <br/>&nbsp;trend in my community.&#8221;
+                </p>
                 <form action="{% url register %}" method="post" id="registration_form" autocomplete="off">
                     <div class="form_row overset form_row_float form_row_float_left_field">
                         <label for="id_first_name">First name</label>
