--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -25,9 +25,9 @@
     <div class="grid_3 omega">
         <div class="box_one_top"></div>
         <div class="box_one_middle">
-            <h3>Commitment Cards</h3>
-            <a href="{% url commitments_card_create %}" class="button commitment_card_open">Enter a card</a><br/>
-            <a href="{% url commitments_show %}">Manage commitment cards</a>
+            <h3>Pledge Cards</h3>
+            <a href="{% url commitments_card_create %}" class="button commitment_card_open">Enter a pledge card</a><br/>
+            <a href="{% url commitments_show %}">Manage your pledge cards</a>
         </div>
         <div class="box_one_bottom"></div>
         {% if commitment_list %}
