--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -30,6 +30,12 @@
             <a href="{% url commitments_show %}">Manage commitment cards</a>
         </div>
         <div class="box_one_bottom"></div>
+        <div class="box_one_top"></div>
+        <div class="box_one_middle">
+            <h3>Progress</h3>
+            {% include "rah/_progress_stats.html" %}
+        </div>
+        <div class="box_one_bottom"></div>
         {% if commitment_list %}
         <div class="box_one_top"></div>
         <div class="box_one_middle">
