dropping magnify your impact block

--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -53,9 +53,9 @@
         <div class="box_one_bottom"></div>
         {% endif %}
         
-        {% if not is_others_profile %}
-            {% include 'rah/_magnify.html' %}
-        {% endif %}
+        {# {% if not is_others_profile %} #}
+        {#     {% include 'rah/_magnify.html' %} #}
+        {# {% endif %} #}
         
         {% if my_groups or my_geo_groups %}
         <div class="box_one_top"></div>
