--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -22,7 +22,7 @@
             <div>
                 <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Frepowerathome.com{{ post.get_absolute_url|urlencode }}&amp;layout=standard&amp;show_faces=false&amp;width=189&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=35" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:189px; height:35px;" allowTransparency="true"></iframe>
                 <br />
-                <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://repowerathome.com{{ post.get_absolute_url }}" data-count="horizontal" data-via="repowerathome">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+                <a href="http://twitter.com/share" class="twitter-share-button" data-url="http://repowerathome.com{{ post.get_absolute_url }}" data-text="{{ post.title }}" data-count="horizontal" data-via="repowerathome">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
             </div>
             {% get_comment_count for post as comment_count %}
             <p>
