fixed absolute links in 500.html along with changing the old events nav item with the new community item

--- a/templates/500.html
+++ b/templates/500.html
@@ -35,10 +35,10 @@
         <div id="header_container">
             <div id="header_bg">
                 <div id="header" class="container_12">
-                    <a href="http://repowerathome.com/" title="Repower America" id="header_logo">
+                    <a href="/" title="Repower America" id="header_logo">
                         <img src="http://prod.static.repowerathome.com/images/theme/logo.png" alt="Repower at Home logo" width="259" height="38"/>
                     </a>
-                    <form action="http://repowerathome.com/search" id="cse_search_box_form">
+                    <form action="/search" id="cse_search_box_form">
                         <div class="overset">
                             <input type="hidden" name="cx" value="018322562804099680750:4l5wfmovb4q" />
                             <input type="hidden" name="cof" value="FORID:11" />
@@ -51,11 +51,11 @@
                         </div>
                     </form>
                     <div id="nav">
-                        <a href="http://repowerathome.com/" id="nav_home">Home</a>
-                        <a href="http://repowerathome.com/actions/" id="nav_actions" >Actions</a>
-                        <a href="http://repowerathome.com/teams/" id="nav_teams">Teams</a>
-                        <a href="http://repowerathome.com/events/" id="nav_events">Events</a>
-                        <a href="http://repowerathome.com/blog/" id="nav_blog">Blog</a>
+                        <a href="/" id="nav_home">Home</a>
+                        <a href="/actions/" id="nav_actions" >Actions</a>
+                        <a href="/teams/" id="nav_teams">Teams</a>
+                        <a href="/actions/community/" id="nav_community">Community</a>
+                        <a href="/blog/" id="nav_blog">Blog</a>
                     </div>
                 </div>
             </div>
@@ -99,15 +99,15 @@
                         <img src="http://prod.static.repowerathome.com/images/theme/social_icons/24/youtube.png" alt="YouTube icon"
                              title="Watch us on YouTube" width="24" height="24"/>
                     </a>
-                    <a href="http://repowerathome.com/blog/feed/">
+                    <a href="/blog/feed/">
                         <img src="http://prod.static.repowerathome.com/images/theme/social_icons/24/feed.png" alt="Feed icon"
                              title="Subscribe to our blog" width="24" height="24"/>
                     </a>
                     <br/>
-                    <a href="http://repowerathome.com/feedback/" class="feedback_link" rel="nofollow">Feedback</a> |
-                    <a href="http://repowerathome.com/terms/" rel="nofollow">Terms of Use</a> |
-                    <a href="http://repowerathome.com/privacy/" rel="nofollow">Privacy Policy</a> |
-                    <a href="http://repowerathome.com/about/">About Us</a>
+                    <a href="/feedback/" class="feedback_link" rel="nofollow">Feedback</a> |
+                    <a href="/terms/" rel="nofollow">Terms of Use</a> |
+                    <a href="/privacy/" rel="nofollow">Privacy Policy</a> |
+                    <a href="/about/">About Us</a>
                     <br/>
                     Copyright &copy; <a href="http://www.climateprotect.org/">The Alliance for Climate Protection</a>
                     2010. All Rights Reserved.
