created seperate css and js sheets so we can display the testing widget on the admin pages, at the moment it looks slightly different, but it works [completed: 559]

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,4 +1,5 @@
 {% extends "admin/base.html" %}
+{% load dated_static %}
 
 {% block title %}{{ title }} | Repower at Home site admin{% endblock %}
 
@@ -7,3 +8,13 @@
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
+
+{% block footer %}
+    {{ super }}
+    <link rel="stylesheet" href="{% dated_static 'css/testing_widget.css' %}" type="text/css" media="screen" charset="utf-8"/>
+    {% if testing_feedback_form %}
+        {% include 'codebase/_testing_widget.html' %}
+    {% endif %}
+    <script type="text/javascript" src="/media/js/jquery.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="{% dated_static 'js/testing_widget.js' %}"></script>
+{% endblock %}
