--- a/codebase/templates/codebase/_testing_widget.html
+++ b/codebase/templates/codebase/_testing_widget.html
@@ -1,9 +1,9 @@
 <div id="testing_widget">
     <div class="right">
         <a class="testing_widget_tab white {% if request.session.testing_widget_opened %}hidden{% endif %}" 
-            href="{% url testing_widget_opened %}">Open Task{{ ticket_count|pluralize }}</a>
+          href="http://{{ request.get_host }}{% url testing_widget_opened %}">Open Task{{ ticket_count|pluralize }}</a>
         <a class="testing_widget_tab white {% if not request.session.testing_widget_opened %}hidden{% endif %}" 
-            href="{% url testing_widget_closed %}">Close Task{{ ticket_count|pluralize }}</a>
+          href="http://{{ request.get_host }}{% url testing_widget_closed %}">Close Task{{ ticket_count|pluralize }}</a>
     </div>
     <div id="testing_feedback_form_container" class="{% if not request.session.testing_widget_opened %}hidden{% endif %}">
         <br/>
