--- a/codebase/templates/codebase/_testing_feedback_form.html
+++ b/codebase/templates/codebase/_testing_feedback_form.html
@@ -1,39 +1,28 @@
 {% load markup %}
-
-<form id="testing_feedback_form" action="{% url testing_feedback %}" method="POST">
-    {% if ticket_count >= 1 %}
-        <div class="ticket_controls">
-            <a id="prev_ticket_control" href="#" class="white">&laquo; prev</a>
-            <b class="white"><span id="ticket_index">1</span> of {{ tickets|length }}</b>
-            <a id="next_ticket_control" href="#" class="white">next &raquo;</a>
+{% for ticket in tickets %}
+    <form action="{% url testing_feedback %}" method="post" id="ticket_id__{{ ticket.ticket_id }}" class="testing_feedback_form hidden ticket_active">
+        <div class="ticket_instructions">
+            <b>{{ ticket.summary }}</b>
+            <div class="smaller">{{ ticket.instructions|markdown:"safe" }}</div>
         </div>
-    {% endif %}
-    <div id="tickets">
-        {% for ticket in tickets %}
-            <div class="{% if forloop.first %}active{% else %}hidden{% endif %} ticket">
-                <span class="ticket_id hidden">{{ ticket.ticket_id }}</span>
-                {# <span>Number of feedback notes: {{ ticket.feedback_count }}</span> #}
-                <b>{{ ticket.summary }}</b>
-                <div class="smaller">{{ ticket.instructions|markdown:"safe" }}</div>
+        <br/>
+        {% for field in testing_feedback_form.visible_fields %}
+            <div class="form_row {% if field.errors %}error{% endif %}">
+                {{ field.label_tag }}{{ field }}
+                {% for error in field.errors %}
+                    <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
+                {% endfor %}
             </div>
         {% endfor %}
-    </div>
-    <br/>
-    {% for field in testing_feedback_form.visible_fields %}
-        <div class="form_row {% if field.errors %}error{% endif %}{% if 'TextInput' in field.field.widget|pprint or 'Textarea' in field.field.widget|pprint %} overset{% endif %}">
-            {{ field.label_tag }}{{ field }}
-            {% for error in field.errors %}
-                <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
+        <div class="hidden">
+            {% for field in testing_feedback_form.hidden_fields %}
+                {{ field }}
             {% endfor %}
         </div>
-    {% endfor %}
-    <div class="hidden">
-        {% for field in testing_feedback_form.hidden_fields %}
-            {{ field }}
-        {% endfor %}
-    </div>
-    <p>
-        <input type="submit" value="Submit" id="ticket_submit"/>
-    </p>
-    {% csrf_token %}
-</form>
+        <p class="center">
+            <button type="submit" class="ticket_submit">Submit</button>
+            <a href="#" class="white ticket_more_feedback hidden smaller">Send more feedback on this</a>
+        </p>
+        {% csrf_token %}
+    </form>
+{% endfor %}
