When there's nothing to test, say so.

--- a/codebase/templates/codebase/_testing_feedback_form.html
+++ b/codebase/templates/codebase/_testing_feedback_form.html
@@ -25,4 +25,6 @@
         </p>
         {% csrf_token %}
     </form>
+    {% empty %}
+    <p class="white">There's nothing to test right now!</p>
 {% endfor %}
